add preferences route (#2)
